# Math-Project

./: .gitignore  CMakeLists.txt  delete-me.h  libdebug.h  libmat.h  pend0  pend0.c  pendflot  pendflot.c  pendule_22  pendule_22.c  view.c  view.h
libmat-init/: Makefile  libdebug.c  libmat.c  libmat.h  pend0.c  pendflot.c
